<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvBeginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="53dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="20dp"
        android:text="@string/begin_date" />

    <TextView
        android:id="@+id/tvDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showDatePickerDialog"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvBeginDate"
        android:layout_marginEnd="101dp"
        android:layout_marginRight="101dp"
        android:text="10/29/2017" />

    <TextView
        android:id="@+id/tvSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvBeginDate"
        android:layout_alignStart="@+id/tvBeginDate"
        android:layout_below="@+id/tvBeginDate"
        android:layout_marginTop="20dp"
        android:text="@string/sort_order" />

    <Spinner
        android:id="@+id/spSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/sort_order_array"
        android:prompt="@string/sort_prompt"
        android:layout_alignBottom="@+id/tvSort"
        android:layout_alignLeft="@+id/tvDatePicker"
        android:layout_alignStart="@+id/tvDatePicker"
        android:layout_alignTop="@+id/tvSort" />

    <TextView
        android:id="@+id/tvNewsDesk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSort"
        android:layout_alignStart="@+id/tvSort"
        android:layout_below="@+id/tvSort"
        android:layout_marginTop="20dp"
        android:text="@string/news_desk_values" />

    <CheckBox
        android:id="@+id/cbArt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvNewsDesk"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:text="@string/art" />

    <CheckBox
        android:id="@+id/cbFashion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbArt"
        android:layout_alignStart="@+id/cbArt"
        android:layout_below="@+id/cbArt"
        android:layout_marginTop="17dp"
        android:text="@string/fashion" />

    <CheckBox
        android:id="@+id/cbSports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbFashion"
        android:layout_alignStart="@+id/cbFashion"
        android:layout_below="@+id/cbFashion"
        android:layout_marginTop="17dp"
        android:text="@string/sports" />


    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbFashion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:onClick="onSave"
        android:text="@string/save" />


</RelativeLayout>